# ChangeLog for app-i18n/uim
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim/ChangeLog,v 1.189 2008/12/09 17:46:04 matsuu Exp $

*uim-1.5.4-r2 (09 Dec 2008)

  09 Dec 2008; MATSUU Takuto <matsuu@gentoo.org>
  +files/uim-1.5.4-gcc43.patch, +files/uim-1.5.4-zhTW.patch,
  +uim-1.5.4-r2.ebuild:
  Added LINGUAS="zh_TW". Fixed gcc-4.3 issue, bug #216759.

*uim-1.5.4-r1 (29 Oct 2008)

  29 Oct 2008; MATSUU Takuto <matsuu@gentoo.org>
  +files/uim-1.5.4-gentoo.patch, +uim-1.5.4-r1.ebuild:
  Fixed qt4 issue, bug #244841. Added libnotify USE flag. cleanup.

*uim-1.5.4 (28 Oct 2008)

  28 Oct 2008; MATSUU Takuto <matsuu@gentoo.org> -uim-1.5.2-r1.ebuild,
  uim-1.5.3.ebuild, +uim-1.5.4.ebuild:
  Version bumped. Removed built_with_use.

*uim-1.5.3 (07 Sep 2008)

  07 Sep 2008; MATSUU Takuto <matsuu@gentoo.org> +uim-1.5.3.ebuild:
  Version bumped.

  06 Sep 2008; MATSUU Takuto <matsuu@gentoo.org> uim-1.4.2.ebuild,
  uim-1.5.2-r1.ebuild:
  Use elisp-complie instead of elisp-comp, bug #235932.

*uim-1.5.2-r1 (09 Aug 2008)

  09 Aug 2008; MATSUU Takuto <matsuu@gentoo.org> -uim-1.5.1.ebuild,
  -uim-1.5.2.ebuild, +uim-1.5.2-r1.ebuild:
  Fixed to work with qt4 USE flag, bug #233872.

*uim-1.5.2 (04 Aug 2008)

  04 Aug 2008; MATSUU Takuto <matsuu@gentoo.org> +uim-1.5.2.ebuild:
  Version bumped.

  31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  27 Jul 2008; Carsten Lohrke <carlo@gentoo.org> uim-1.4.1.ebuild,
  uim-1.4.2.ebuild, uim-1.5.1.ebuild:
  QA: Get rid of deprecated qt_min_version().

  27 Jul 2008; Carsten Lohrke <carlo@gentoo.org> uim-1.5.1.ebuild:
  Fix broken split Qt 4.4 dependencies, cf. bug 217161 comment 11.

  22 May 2008; MATSUU Takuto <matsuu@gentoo.org> uim-1.5.1.ebuild:
  Added -j1 to emake install, bug #222677. Added elibtoolize.

*uim-1.5.1 (18 May 2008)

  18 May 2008; MATSUU Takuto <matsuu@gentoo.org> -uim-1.5.0_beta2.ebuild,