@@ -2,7 +2,7 @@ AUX 50uim-gentoo.el 113 RMD160 4830acc8f32525aaae156cf0252d9e93cd41cc2c SHA1 64b
 AUX uim-1.5.4-gcc43.patch 404 RMD160 99bb3adb856b82b7efcf5e9e07dfe1a647cde83d SHA1 5ec9d1ffbd7eb44568795b9e532e05e7caf59457 SHA256 560494a526ab30d7524d769f359a592c1a73671b51491e426d48306cc537707a
 AUX uim-1.5.4-gentoo.patch 1366 RMD160 2ff73cab38b95772245ed78c06166ca865aa4474 SHA1 cb729594bd9d1cf56c084050ed954bf07fac0e8d SHA256 5b9639144848e42a049426172d7a4b53cbc74532e9787881a807511ab8b6552b
 AUX uim-1.5.4-zhTW.patch 1034 RMD160 8d9102b0937d2746a1b4bad5470b1480b94b5eb8 SHA1 d93cf2c1f7e253fefdbdb80f2207b2080d2d1768 SHA256 82afb0a1cc1c2e706ac02da71084fe16655bbcb9719710ae37057ab6c14b9196
-DIST uim-1.5.4.tar.bz2 3212490 RMD160 e7beb0602fff76444d47350c3057a7b533c15b20 SHA1 ce5b44040f951c7d07e0b0fa8540e0e5107c484f SHA256 4ff520f607be4195531ff53cb28a20bf8e342622ff94c518a4cd46fe7b2a3daf
-EBUILD uim-1.5.4-r2.ebuild 5721 RMD160 c9aa938634b7a6df45967dcd90f3d5c8a21df56b SHA1 c4a42534b66ffac83dcd1de22b2f8187f6e790e4 SHA256 99da21a8dd424b848f018bb64338295e041a4f9db6645a8ce45d10f5921f216c
-MISC ChangeLog 26548 RMD160 c76a42b1980f6012651c25d90db47b027fa7bc8e SHA1 8c45e301a0930c141c3d8a966f72c97312afb3bc SHA256 dc7853f59a5a65080119915646dfde300f1856cc25b35807f659046f44268177
+DIST uim-1.5.5.tar.bz2 3259238 RMD160 ac3815658d02abde9d2bf68b90f3e3777734d7e9 SHA1 d688f962073f0f95391fa38cb82ee5703c2ff3b8 SHA256 b5be3e3651234a442723d8ae4c15219520dac1cab087c62958d0ba8dd0fff43d
+EBUILD uim-1.5.5.ebuild 5393 RMD160 90603f95b34d8e201b74cdee46b370e6f5955168 SHA1 85be558035be87abd52ada62a9825b3bca196c53 SHA256 60b23ec2a15cd40eea6f9707be98d072314e9ce0c82919f5b4432554f87001b3
+MISC ChangeLog 26882 RMD160 04a6a20e71a922d99fe1d675052fe4145198bf63 SHA1 54886c23b47f7c6081a338da8c66404ab279454e SHA256 fde0cdcee50863843bb729c637aa71f4cbf69ccfd511d76f83ca15a89e5adcd7
 MISC metadata.xml 815 RMD160 012fd0ff539fa5f7d943f2b2b955af2b1a51579f SHA1 1c035765a6908e1b767689d899a68876e44dc772 SHA256 a1f64b1559c0291cb60d8783c53482f9235f03802984816c827255f92d171d5e
